--- a/soluciones_practica_2.ipynb
+++ b/soluciones_practica_2.ipynb
@@ -32,7 +32,17 @@
    "id": "f9dba5e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.datasets import fetch_covtype\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,7 +62,13 @@
    "id": "343b57a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the Covertype dataset\n",
+    "cov_type = fetch_covtype()\n",
+    "# Separate the features and the target variable\n",
+    "X = cov_type.data\n",
+    "y = cov_type.target"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bc7d1c1a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.5, random_state=42, stratify=y\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3411fd",
+   "metadata": {},
+   "source": [
+    "No hace falta escalarlo, lo dice la teacher (los árboles se tragan todo lo que les des)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,48 +104,87 @@
    "metadata": {},
    "source": [
     "3. Utilice la clase DecisionTreeClassifier de Sklearn para resolver el problema\n",
-    "y d ́e un resultado de test usando la m ́etrica que considere oportuna"
+    "y dé un resultado de test usando la m ́etrica que considere oportuna"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "485a28a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 92.34611333328743 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "y_pred = decision_tree.predict(X_test)\n",
+    "porcentaje = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", porcentaje*100, \"%\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "2a02190d",
    "metadata": {},
    "source": [
-    "4. ¿Había missing values en nuestro problema? ¿Qué efecto tendría en los  ́arboles no completar los missing values ?"
+    "4. ¿Había missing values en nuestro problema? ¿Qué efecto tendría en los árboles no completar los missing values ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3e99457c",
+   "execution_count": 14,
+   "id": "29705ab3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(X_train).sum()==0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52ffbee",
+   "metadata": {},
+   "source": [
+    "Si existieran y no se imputaran, DecisionTreeClassifier daría error al entrenar, porque los árboles no soportan missing values; requieren que todos los datos estén completos para funcionar. Para solucionar este problema, se podrían imputar con media, mediana o un valor concreto."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b7f58d6a",
    "metadata": {},
    "source": [
-    "5. ¿Con qué parémetro podr ́ıa controlarse la profundidad del ́arbol? ¿Qué ocurre si un ́arbol se inicializa sin dar un valor concreto a ese parámetro? ¿Crees que sería una buena práctica no darle ningún valor?"
+    "5. ¿Con qué parémetro podría controlarse la profundidad del ́arbol? ¿Qué ocurre si un ́arbol se inicializa sin dar un valor concreto a ese parámetro? ¿Crees que sería una buena práctica no darle ningún valor?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ba79ba6",
+   "cell_type": "markdown",
+   "id": "3b2256c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "a) La profundidad máxima del árbol se controla con el parámetro max_depth directamente, que por defecto es max_depth=None. Sin embargo, también se puede controlar indirectamente con min_samples_split, que no divide un nodo si tiene menos muestras que las requeridas, y con min_samples_leaf, que obliga a que cada hoja tenga un mínimo de muestras para evitar que existan ramas muy profundas con pocas muestras. Por lo tanto, con estos valores se reduce la profundidad máxima alcanzada.\n",
+    "\n",
+    "b) Crecería tanto como datos se le pasaran sin ningún tipo de límite.\n",
+    "\n",
+    "c) No, debido a que sin un límite establecido, los árboles grandes consumen más memoria, tardan más en entrenar y tienden a sobreajustarse más fácilmente. Con lo cual, sería importante definir un max_depth razonable teniendo en cuenta los datos."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,6 +200,12 @@
    "id": "0f55122c",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39aabafc",
+   "metadata": {},
    "source": []
   },
   {
@@ -153,6 +226,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e21fe9c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b23981d2",
    "metadata": {},
    "source": [
@@ -165,6 +244,12 @@
    "id": "0ccf061d",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b1ca953",
+   "metadata": {},
    "source": []
   },
   {
@@ -185,6 +270,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9165a8ad",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "65ff286d",
    "metadata": {},
    "source": [
@@ -201,6 +292,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc89f317",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "e11b88d4",
    "metadata": {},
    "source": [
@@ -213,6 +310,12 @@
    "id": "e199f75b",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b84ac6",
+   "metadata": {},
    "source": []
   },
   {
