--- a/soluciones_practica_2.ipynb
+++ b/soluciones_practica_2.ipynb
@@ -452,14 +452,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eed7f3b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "81523487",
    "metadata": {},
@@ -512,6 +504,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ff440f8",
+   "metadata": {},
+   "source": [
+    "**1. Construya una clase Nodo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44595126",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe435e40",
+   "metadata": {},
+   "source": [
+    "**2. Construya la clase RegressionTree**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54d477de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7988ec4e",
    "metadata": {},
    "source": [
@@ -523,10 +547,14 @@
    "id": "b137eebc",
    "metadata": {},
    "source": [
-    "**1. ¿C ́omo evoluciona el error de training y test conforme se aumenta la pro-\n",
-    "fundidad del  ́arbol? Base su razonamiento en dos gr ́aficas obtenidas con\n",
-    "matplotlib.**"
+    "**1. ¿Cómo evoluciona el error de training y test conforme se aumenta la profundidad del  ́arbol? Base su razonamiento en dos gráficas obtenidas con matplotlib.**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ebca09c",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -538,11 +566,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef1f0dbf",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d98a3a8",
    "metadata": {},
    "source": [
     "**3. Tome un par de muestras y utilizando el método decision_path(x) justifique la predicción dada. Como habrá comprobado, el método decision_path(x) devuelve una lista ordenada de argumentos, suponga que esa lista se desordena: ¿seguiría siendo válida la interpretación de la predicción?**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c579ef",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -554,11 +594,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cae33df2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "24277e32",
    "metadata": {},
    "source": [
     "**5. Suponga que divide el conjunto de train en dos mitades, entrena dos árboles distintos, uno con cada mitad, y toma una muestra de test. ¿Sería la predicción de la muestra igual en cada árbol? ¿Y la interpretación obtenida con decision_path(x)? ¿Qué repercusión en la interpretación tendría esa situación?**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f407f25",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -570,6 +622,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16f64d24",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "8cf1ff5b",
    "metadata": {},
    "source": [
@@ -578,10 +636,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2810433b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "8e63c150",
    "metadata": {},
    "source": [
-    "---\n",
     "\n",
     "### **3. Ensembles**"
    ]
